# pydmart

./: .gitignore  README.md  notes.sh  setup.cfg
src/: dmart_service.py
