[metadata]
name = pydmart
version = 1.0
author = <Saad Adel>
author_email = saad.adel539@yahoo.com
description = A client to connect to a Dmart isntance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edraj/pydmart
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src